# sync_code_server

./: Cargo.toml  README.md
config/: config.toml
src/: config.rs  main.rs
