[package]
name = "sync_code"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
config = "0.13"
